--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.facebook.stetho:stetho:1.5.0'
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.1.51"
 }
 repositories {
     mavenCentral()
